feat: bookResponse에 태그 추가